--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "api",
     "app"
   ],
+  "engines": {
+    "npm": ">= 8.13.2"
+  },
   "main": "index.js",
   "scripts": {
     "build": "npm run build --workspace=app",
